create github pages

--- a/index.html
+++ b/index.html
@@ -757,7 +757,7 @@ pour réaliser vos ambitions avec passion.<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
-                    <a href="index.html#content5-73" class="text-white">COACHING</a></h5>
+                    <a href="index.html#content5-73" class="text-danger">COACHING</a></h5>
                 <p class="mbr-text"><a href="personnel.html" class="text-danger">&gt; PERSONNEL &lt;</a><br><a href="personnel.html" class="text-danger"></a><a href="entreprise.html" class="text-danger">&gt; ENTREPRISE &lt;</a>&nbsp;<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
@@ -802,7 +802,7 @@ pour réaliser vos ambitions avec passion.<br></p>
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
