--- a/personnel.html
+++ b/personnel.html
@@ -410,7 +410,7 @@ leurs réussites en fonction de vos besoins.</p>
     </div>
 </section>
 
-<section class="cid-rzLdqWxDi8" id="footer1-a0">
+<section class="cid-rOzRveZcLc" id="footer1-af">
 
     
 
@@ -426,20 +426,20 @@ leurs réussites en fonction de vos besoins.</p>
                 </div>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3"><a href="home.html" class="text-white">
+                <h5 class="pb-3"><a href="index.html" class="text-white">
                     Coachinglab.fr</a></h5>
                 <p class="mbr-text">
-                    <a href="apropos.html" class="text-info">A propos</a><br><a href="home.html#header11-78" class="text-info">Comment ca marche&nbsp;</a>?<br><br><a href="contact.html">Me contacter aujourd'hui &gt;</a><br></p>
+                    <a href="apropos.html#features1-6u" class="text-info">A propos</a><br><a href="index.html#header11-8m" class="text-info">Comment ca marche&nbsp;</a>?<br><br><a href="contact.html">Me contacter aujourd'hui &gt;</a><br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
-                    <a href="index.html#content5-73" class="text-white">COACHING</a></h5>
-                <p class="mbr-text"><a href="personnel.html" class="text-danger">&gt; PERSONNEL &lt;</a><br><a href="personnel.html" class="text-danger"></a><a href="professionel.html" class="text-danger">&gt; ENTREPRISE &lt;</a>&nbsp;<br></p>
+                    <a href="index.html#content5-73" class="text-danger">COACHING</a></h5>
+                <p class="mbr-text"><a href="personnel.html" class="text-danger">&gt; PERSONNEL &lt;</a><br><a href="personnel.html" class="text-danger"></a><a href="entreprise.html" class="text-danger">&gt; ENTREPRISE &lt;</a>&nbsp;<br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
                     Séances</h5>
-                <p class="mbr-text"><a href="rdvno1.html" class="text-secondary">&gt; ESSAYER &lt;</a><br><a href="offrez.html" class="text-secondary">&gt; OFFRIR &lt;</a><br><a href="page8.html" class="text-secondary">&gt; RESERVER votre SEANCE &lt;</a><br><br>Lun - Ven / 9 - 19h</p>
+                <p class="mbr-text"><a href="essai.html" class="text-secondary">&gt; ESSAYER &lt;</a><br><a href="offrez.html" class="text-secondary">&gt; OFFRIR &lt;</a><br><a href="rdv.html" class="text-secondary">&gt; RESERVER votre SEANCE &lt;</a><br><br>Lun - Ven / 9 - 19h</p>
             </div>
         </div>
         
@@ -476,7 +476,7 @@ leurs réussites en fonction de vos besoins.</p>
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
