--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Nous sommes à vos cotés, où que vous soyez">
                         <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -83,7 +83,7 @@ Nous sommes à vos cotés, où que vous soyez">
 
     
 
-    <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(35, 35, 35);">
+    <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(70, 80, 82);">
     </div>
 
     <div class="container">
