--- a/apropos.html
+++ b/apropos.html
@@ -90,7 +90,7 @@
                 
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-5"><strong>
                     </strong><br><br><br><br><strong>A PROPOS</strong></h3>
-                <p class="mbr-text align-center pb-3 mbr-fonts-style display-4">Accueil &nbsp;&gt; <a href="apropos.html" class="text-white">A propos</a></p>
+                <p class="mbr-text align-center pb-3 mbr-fonts-style display-4"><a href="index.html" class="text-white">Accueil</a> &nbsp;&gt; <a href="apropos.html" class="text-white">A propos</a></p>
                 
             </div>
         </div>
