--- a/apropos.html
+++ b/apropos.html
@@ -414,7 +414,7 @@ quelque soit l'endroit où vous vous trouvez.<br>
                 <h5 class="pb-3"><a href="index.html" class="text-white">
                     Coachinglab.fr</a></h5>
                 <p class="mbr-text">
-                    <a href="apropos.html#features1-6u" class="text-info">A propos</a><br><a href="index.html#header11-8m" class="text-info">Comment ca marche&nbsp;</a>?<br><br><a href="contact.html">Me contacter aujourd'hui &gt;</a><br></p>
+                    <a href="#top" class="text-info">A propos</a><br><a href="index.html#header11-8m" class="text-info">Comment ca marche&nbsp;</a>?<br><br><a href="contact.html">Me contacter aujourd'hui &gt;</a><br></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
