create github pages

--- a/apropos.html
+++ b/apropos.html
@@ -87,10 +87,9 @@
         <div class="row justify-content-md-center">
             <div class="col-md-10 align-center">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-5">
-                    <br><br><br><br>A PROPOS</h1>
+                    <br><br><br><br>A PROPOS<br></h1>
                 
-                <p class="mbr-text pb-3 mbr-fonts-style display-4">
-                    <a href="index.html" class="text-info">Accueil </a>&gt; <a href="apropos.html" class="text-info">A propos</a><br><a href="apropos.html" class="text-info"><br></a></p>
+                <p class="mbr-text pb-3 mbr-fonts-style display-4">Le métier :&nbsp; accompagner, soutenir,<br> pour permettre aux particuliers et entreprises, <br>de créer les meilleures conditions de leur réussite.<br></p>
                 
             </div>
         </div>
@@ -411,8 +410,7 @@ quelque soit l'endroit où vous vous trouvez.<br>
                 </div>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
-                <h5 class="pb-3"><a href="index.html" class="text-white">
-                    Coachinglab.fr</a></h5>
+                <h5 class="pb-3">Coachinglab.fr</h5>
                 <p class="mbr-text">
                     <a href="#top" class="text-info">A propos</a><br><a href="index.html#header11-8m" class="text-info">Comment ca marche&nbsp;</a>?<br><br><a href="contact.html">Me contacter aujourd'hui &gt;</a><br></p>
             </div>
