--- a/index.html
+++ b/index.html
@@ -300,8 +300,7 @@ Nous sommes à vos cotés, où que vous soyez">
                     </div>
                     <div class="card-footer">
                         <div class="mbr-author-name mbr-bold mbr-fonts-style display-7"><span style="font-weight: normal;">Nous accompagnons les personnes qui sont 
-</span><div><span style="font-weight: normal;">&gt; EN QUETE DE MOTIVATION  A OBTENIR PLUS 
-</span></div><div><span style="font-weight: normal;">&gt; EN LUTTE A CHANGER LEUR VIE 
+</span><div><span style="font-weight: normal;">&gt; EN QUETE DE MOTIVATION  A OBTENIR +</span></div><div><span style="font-weight: normal;">&gt; EN LUTTE A CHANGER LEUR VIE 
 </span></div><div><span style="font-weight: normal;">&gt; EN RECHERCHE DE SOUTIEN A ATTEINDRE LEURS OBJECTIFS</span></div></div>
                         
                     </div>
