create github pages

--- a/apropos.html
+++ b/apropos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html  >
+<html  lang="fr">
 <head>
   
   <meta charset="UTF-8">
@@ -9,25 +9,28 @@
   <link rel="shortcut icon" href="assets/images/-logo-seul-clab-final.gif" type="image/x-icon">
   <meta name="description" content="Le coaching en ligne vous donne accès, à un moment pour vous connecter à vous-même, à vos challenges quelque soit l'endroit où vous vous trouvez.">
   
+  
   <title>CoachingLAB.fr | A propos</title>
-  <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
-  <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
+  
+
 </head>
 <body>
 
-<!-- Google Analytics -->
+<!-- Analytics -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-P9BVT0FSP4"></script>
 <script>
@@ -37,9 +40,10 @@
 
   gtag('config', 'G-P9BVT0FSP4');
 </script>
-<!-- /Google Analytics -->
+<!-- /Analytics -->
 
 
+  
   <section class="menu cid-reLWc2cZdI" once="menu" id="menu2-93">
 
     
@@ -439,7 +443,7 @@ quelque soit l'endroit où vous vous trouvez.<br>
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © 2020 Coachinglab - Tous droits réservés
+                    © 2021 Coachinglab - Tous droits réservés
                 </p>
             </div>
         </div>
@@ -447,17 +451,19 @@ quelque soit l'endroit où vous vous trouvez.<br>
 </section>
 
 
-  <script src="assets/web/assets/jquery/jquery.min.js"></script>
+<script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
-  <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/tether/tether.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
+  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
+  
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-  </body>
+  
+</body>
 </html>
