--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html  >
+<html  lang="fr">
 <head>
   
   <meta charset="UTF-8">
@@ -11,25 +11,29 @@
 sd.coach.succes@gmail.com
 au  07.69.74.63.90">
   
+  
   <title>CoachingLAB.fr | Contact</title>
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
-  <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  <link rel="stylesheet" href="assets/recaptcha.css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
+  
+
 </head>
 <body>
 
-<!-- Google Analytics -->
+<!-- Analytics -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-P9BVT0FSP4"></script>
 <script>
@@ -39,9 +43,10 @@ au  07.69.74.63.90">
 
   gtag('config', 'G-P9BVT0FSP4');
 </script>
-<!-- /Google Analytics -->
+<!-- /Analytics -->
 
 
+  
   <section class="menu cid-rEA8D9UH9B" once="menu" id="menu2-ab">
 
     
@@ -207,7 +212,7 @@ au  07.69.74.63.90">
                     <div data-form-alert="" hidden="">Votre message a été transmis.
 Nous vous répondrons dans les meilleurs délais.</div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1zvDU4YFnTc6VJJxa1fDa20JaUAFLMne9JkjoxvfA/SbbaIJW+/cLEgx1vL6tRjpRrzEf9JdnqR+voLWaCFYwCU0aEDDwNHUarjTRtJ+pTdyAomz2+R0pHrI8eVmxjFN.WM3kqtyyyJHjitn2Yozu2wazXYCIF5ld8QVa0MxITSLg2KvSZgvdb3aX4kqiXKBTPULUOZQcuhNyty59vimTmlVlAGcHWY8dHEcWIUpwwnFdH6fE1LVjfElOozWSd55P">
+                    <form class="mbr-form" action="https://mobirise.eu/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="TC5nI6S2PNbbcl7rXQ68vkT5V6ngPMNDWOxCja8qcZQbBTavf5R2UVA60EYzj5hRt1qDgvXrwbrdN76JWnrwd9IFFUE6b0zOz/ZtlN+m4C8h4PHxcHe7AM1oIQLniTTs.U0nGcSYLfY0+3lBCeoBG2Bc9sNOhGPfufFVaOWH3QFESYTJPOo8lZ/e91FAi0Y5fEEQxQRV2HmN3CDnn6Ete0/YBYNJcofdXJmBg7TfSIkbjfN/Jvs/64FtDy0SibSqo">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -305,7 +310,7 @@ Nous vous répondrons dans les meilleurs délais.</div>
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © 2020 Coachinglab - Tous droits réservés
+                    © 2021 Coachinglab - Tous droits réservés
                 </p>
             </div>
         </div>
@@ -313,19 +318,21 @@ Nous vous répondrons dans les meilleurs délais.</div>
 </section>
 
 
-  <script src="assets/web/assets/jquery/jquery.min.js"></script>
+<script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
-  <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/parallax/jarallax.min.js"></script>
+  <script src="assets/tether/tether.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
+  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
-  <script src="assets/formoid/formoid.min.js"></script>
+  <script src="assets/formoid.min.js"></script>
+  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-  </body>
+  
+</body>
 </html>
