--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html  >
+<html  lang="fr">
 <head>
   
   <meta charset="UTF-8">
@@ -10,25 +10,28 @@
   <meta name="description" content="Obtenez le soutien dont vous avez besoin.
 Nous sommes à vos cotés, où que vous soyez">
   
+  
   <title>CoachingLAB.fr | Au service de votre réussite</title>
-  <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
-  <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <link rel="stylesheet" href="assets/bootstrap-material-design-font/css/material.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
+  <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
+  
+
 </head>
 <body>
 
-<!-- Google Analytics -->
+<!-- Analytics -->
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-P9BVT0FSP4"></script>
 <script>
@@ -38,9 +41,10 @@ Nous sommes à vos cotés, où que vous soyez">
 
   gtag('config', 'G-P9BVT0FSP4');
 </script>
-<!-- /Google Analytics -->
+<!-- /Analytics -->
 
 
+  
   <section class="menu cid-rcT743DS9y" once="menu" id="menu2-0">
 
     
@@ -58,7 +62,7 @@ Nous sommes à vos cotés, où que vous soyez">
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 3.8rem;">
+                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 4.6rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
@@ -87,7 +91,7 @@ Nous sommes à vos cotés, où que vous soyez">
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-figure" style="width: 75%;">
+            <div class="mbr-figure" style="width: 70%;">
                 <img src="assets/images/www.coachinglab.fr-1.gif" alt="" title="">
             </div>
 
@@ -769,7 +773,7 @@ pour réaliser vos ambitions avec passion.<br></p>
     <div class="container">
         <div class="media-container-row">
 
-            <div class="card  col-12 col-md-6 col-lg-4">
+            <div class="card col-12 col-md-6 col-lg-4">
                 <div class="card-img">
                     <span class="mbr-iconfont mbri-responsive" style="color: rgb(0, 166, 237); fill: rgb(0, 166, 237); font-size: 90px;"></span>
                 </div>
@@ -783,7 +787,7 @@ pour réaliser vos ambitions avec passion.<br></p>
                 </div>
             </div>
 
-            <div class="card  col-12 col-md-6 col-lg-4">
+            <div class="card col-12 col-md-6 col-lg-4">
                 <div class="card-img">
                     <span class="mbr-iconfont mbri-rocket" style="color: rgb(0, 166, 237); fill: rgb(0, 166, 237); font-size: 90px;"></span>
                 </div>
@@ -798,7 +802,7 @@ pour réaliser vos ambitions avec passion.<br></p>
                 </div>
             </div>
 
-            <div class="card  col-12 col-md-6 col-lg-4">
+            <div class="card col-12 col-md-6 col-lg-4">
                 <div class="card-img">
                     <span class="mbr-iconfont mbri-globe-2" style="color: rgb(0, 166, 237); fill: rgb(0, 166, 237); font-size: 90px;"></span>
                 </div>
@@ -884,7 +888,7 @@ pour réaliser vos ambitions avec passion.<br></p>
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © 2020 Coachinglab - Tous droits réservés
+                    © 2021 Coachinglab - Tous droits réservés
                 </p>
             </div>
         </div>
@@ -892,19 +896,21 @@ pour réaliser vos ambitions avec passion.<br></p>
 </section>
 
 
-  <script src="assets/web/assets/jquery/jquery.min.js"></script>
+<script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
-  <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/parallax/jarallax.min.js"></script>
-  <script src="assets/mbr-flip-card/mbr-flip-card.js"></script>
+  <script src="assets/tether/tether.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
+  <script src="assets/mbr-flip-card/mbr-flip-card.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
+  
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-  </body>
+  
+</body>
 </html>
