create github pages

--- a/apropos.html
+++ b/apropos.html
@@ -44,7 +44,7 @@
 
 
   
-  <section class="menu cid-reLWc2cZdI" once="menu" id="menu2-93">
+  <section class="menu cid-stjsLqVNU3" once="menu" id="menu2-bo">
 
     
 
@@ -61,7 +61,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 3.8rem;">
+                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 4.6rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
