--- a/forward.html
+++ b/forward.html
@@ -44,7 +44,7 @@
 
 
   
-  <section class="menu cid-sswpmVdpoS" once="menu" id="menu2-bh">
+  <section class="menu cid-stjsLqVNU3" once="menu" id="menu2-bo">
 
     
 
@@ -61,7 +61,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 3.8rem;">
+                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 4.6rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
@@ -113,7 +113,7 @@
             </div>
 
             <div class="media-content">
-                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2"><strong>FAITES CONNAITRE</strong><br><strong>à vos proches</strong></h1>
+                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2"><strong><br></strong><br><br><strong>FAITES CONNAITRE</strong><br><strong>à vos proches</strong></h1>
                 
                 <div class="mbr-section-text mbr-white pb-3 ">
                     <p class="mbr-text mbr-fonts-style display-4"></p>
@@ -142,7 +142,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="WBazCX4LQ5T71u+6wy2WxXTXc1kJ1Af8vbtibEbfrxw3+45If+qvonuWbbngB91BpntODT+AXPYE8h44eo9/ogjqVMVIU2j3kXOun1j+GG2ndsJfVB2Jef+d3GRagN7Q.6/scJJ8Oyu/1rdgPI/vGr9N8So/tJ21fms7mDcAo9VRyvOoxXysBYFtshvpy7hlwgFkoIDF4ZQq48MSe70lqdg0x4hfh67zCpLW5rXYe9vg35WAosVy+lw4+YvC4Pv8M">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="h8ku23nakekXBmI1BqmM4ZJEbxG/+zLPR+vePTDEIC4exreDPthHzmk4CRn84ju6V9WjfMcPQmtUmM1clzli2mXT6Y3+zNsunwI4x8t6Se+kJOQJNswm8W0eqOCsNtU6.D2DRnND1nJ5L3ezBDqRjTWqkrgjuqdMouNyIBc0IVUQuESCBtCD/VONb9ICVW+IUtKEcm3Wcd8oqbuMrBmiotzSzad33Nuz/Bn5tTS7lY70MNnx/sak5jwUMwwrtUPAl">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
