--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@ au  07.69.74.63.90">
 
 
   
-  <section class="menu cid-rEA8D9UH9B" once="menu" id="menu2-ab">
+  <section class="menu cid-stjsLqVNU3" once="menu" id="menu2-bo">
 
     
 
@@ -64,7 +64,7 @@ au  07.69.74.63.90">
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 3.8rem;">
+                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 4.6rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
@@ -212,7 +212,7 @@ au  07.69.74.63.90">
                     <div data-form-alert="" hidden="">Votre message a été transmis.
 Nous vous répondrons dans les meilleurs délais.</div>
             
-                    <form class="mbr-form" action="https://mobirise.eu/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VNc3MFcygdHprUfULT/bDLk64VjAbce/8wH8R2V2NtUEvf3gwGieeg0WFm2U4u6RYmGIuq5Szo90r8uwXENpKGIw0igknpiQh5IsGvKhQpfH+g05DgYyCKK5hVO/YFCS.GahGpYPAzIq7Xu5ktNi5klGgPm0InayW7u7HpBP6VJOsBbofktMjokieOA1vtk+QK/3G7SHYeB2XOi2O4i7lZAdXIhoQAigUVPAK31CoctNKIG5SpeHMSmTKn6bS6feI">
+                    <form class="mbr-form" action="https://mobirise.eu/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PriAwQ/61Y+mT+5NM5m08ylvl/8a3EMvP9/biRVchXD+2XMez7waoqEy+UYv/yrx/H0wvsH3jo65fLzfX2fj/R/b+LEuU82IaIktL/yvtVZIJZMFfCDW0acxdOB9GnM9.cdc7dqDNIAY9fByhwVdiR7xKuUrRybdQrVVjWW6JoZ8vZTDXDg7QvNjHsRI7d+3/F28S5C8/HfBl8gFn5ffOdqeDtrn55dcBBE1M9TU0j3X3vT2eKHouO5d6kRJXSyRm">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
@@ -323,10 +323,10 @@ Nous vous répondrons dans les meilleurs délais.</div>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
-  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid.min.js"></script>
   
