create github pages

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@ au  07.69.74.63.90">
 
 
   
-  <section class="menu cid-stjsLqVNU3" once="menu" id="menu2-bo">
+  <section class="menu cid-stjueGxZFY" once="menu" id="menu2-bq">
 
     
 
@@ -64,7 +64,7 @@ au  07.69.74.63.90">
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 4.6rem;">
+                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 4rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
@@ -212,7 +212,7 @@ au  07.69.74.63.90">
                     <div data-form-alert="" hidden="">Votre message a été transmis.
 Nous vous répondrons dans les meilleurs délais.</div>
             
-                    <form class="mbr-form" action="https://mobirise.eu/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="PriAwQ/61Y+mT+5NM5m08ylvl/8a3EMvP9/biRVchXD+2XMez7waoqEy+UYv/yrx/H0wvsH3jo65fLzfX2fj/R/b+LEuU82IaIktL/yvtVZIJZMFfCDW0acxdOB9GnM9.cdc7dqDNIAY9fByhwVdiR7xKuUrRybdQrVVjWW6JoZ8vZTDXDg7QvNjHsRI7d+3/F28S5C8/HfBl8gFn5ffOdqeDtrn55dcBBE1M9TU0j3X3vT2eKHouO5d6kRJXSyRm">
+                    <form class="mbr-form" action="https://mobirise.eu/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="cLAPdeGIsx/VusCVKNCjvg+cW6HRyjMOrL0FWjBMCSXYVQuAPvOAOBlnSNjHbCt/nRKaeSZYIgWVOiuFnUzHcb0BiT/AnwBnBV4+uqONqoTLndyEJp+EOjGNds/zdWlr.4qS15tVHOccLqO/pl3ay+ycdpQXkGjJt/xgEAlqeL5aHAE4UHP44yeiu37/3w/N79siovf1A0h2/6hXhWjVX9YWAyCpbbCpxvN1z6OkWm/yIE6eEXNBMhODJX/mNpU+I">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
