--- a/entreprise.html
+++ b/entreprise.html
@@ -45,7 +45,7 @@ pour innover et créer les succès futurs de votre entreprise .">
 
 
   
-  <section class="menu cid-stjsLqVNU3" once="menu" id="menu2-bo">
+  <section class="menu cid-stjueGxZFY" once="menu" id="menu2-bq">
 
     
 
@@ -62,7 +62,7 @@ pour innover et créer les succès futurs de votre entreprise .">
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 4.6rem;">
+                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 4rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
