--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Nous sommes à vos cotés, où que vous soyez">
 
 
   
-  <section class="menu cid-stjsLqVNU3" once="menu" id="menu2-bo">
+  <section class="menu cid-stjueGxZFY" once="menu" id="menu2-bq">
 
     
 
@@ -62,7 +62,7 @@ Nous sommes à vos cotés, où que vous soyez">
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 4.6rem;">
+                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 4rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
@@ -901,11 +901,11 @@ pour réaliser vos ambitions avec passion.<br></p>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/parallax/jarallax.min.js"></script>
-  <script src="assets/mbr-flip-card/mbr-flip-card.js"></script>
   <script src="assets/dropdown/js/nav-dropdown.js"></script>
   <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
+  <script src="assets/mbr-flip-card/mbr-flip-card.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
