--- a/rdv.html
+++ b/rdv.html
@@ -43,7 +43,7 @@
 
 
   
-  <section class="menu cid-stjsLqVNU3" once="menu" id="menu2-bo">
+  <section class="menu cid-stjueGxZFY" once="menu" id="menu2-bq">
 
     
 
@@ -60,7 +60,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 4.6rem;">
+                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 4rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
