create github pages

--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@ au  07.69.74.63.90">
 
 
   
-  <section class="menu cid-stjueGxZFY" once="menu" id="menu2-bq">
+  <section class="menu cid-stjz9VgjbS" once="menu" id="menu2-bt">
 
     
 
@@ -64,7 +64,7 @@ au  07.69.74.63.90">
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 4rem;">
+                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 4.6rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
@@ -212,7 +212,7 @@ au  07.69.74.63.90">
                     <div data-form-alert="" hidden="">Votre message a été transmis.
 Nous vous répondrons dans les meilleurs délais.</div>
             
-                    <form class="mbr-form" action="https://mobirise.eu/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Yj1Ck2hjQIkqp9zCDvZBENG/zygsfep6Ez+UPI6schWwYo0cTqZMEq9D0OizloWHIu4a7Tr34tlROOPfqCFOfTxGSnAoR6Q6lk22YReBd5hKRqArXlFy7a0kYsLi+NsU.EzWeFm8AaRhEHJg2h8PrzQ1j9NtgZiMkpwfgWZoUCy+16avPR8AnbuPe2jzJn3QPV6q3Ij9xNgnTnXtB5FcJ7E0H6Ivbsc1CrLdxQKfzmuhZQM8IlMIvt+wf5Kxu5Ydy">
+                    <form class="mbr-form" action="https://mobirise.eu/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OfzR4Vc4RoXwjR8NWRiWvR1vyT7gsYnWxBJ0zj+mLkX3P5bWEo7IF845vJaGtsBo/iq4KCiN0H7vpOec7Bq6Ub4eQP1SYkuiqeFvKyGM2KYW3fNW++0YQxexd3R6fxOt.oWEKMB5DV7+P3hF2jLLC1zZEFhNO9EtgT0JO0yRtafvMRJ0K1yzwpllKvjhlwsjf45zHpjxNCVGqbqi9HjnjwUwwN/yTunY755e13Lk16e3bHo+8qa4hep5YS+n9cL+9">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
