--- a/forward.html
+++ b/forward.html
@@ -44,7 +44,7 @@
 
 
   
-  <section class="menu cid-stjueGxZFY" once="menu" id="menu2-bq">
+  <section class="menu cid-stjz9VgjbS" once="menu" id="menu2-bt">
 
     
 
@@ -61,7 +61,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 4rem;">
+                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 4.6rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
@@ -142,7 +142,7 @@
         <div class="row py-2 justify-content-center">
             <div class="col-12 col-lg-6  col-md-8 " data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="w/1D3KQBNmg3GbjIq0Rfo6hZJwF1lYW9c3nsVG6zNc/CVLtEOp8bsl1w62m4FSf5Ggk2Zo8jwFa+UBU+gUpEBlXOTjMPft+3p+NkfJNBj2xBIzIGzUwM0Bk21KrTbQh3.PW36ziSGdjGK0ohWIT1SB/KMhlg8bSAbYfQPgw+NebtmDvi5Oam2BbW1y6ZYimix/WK47tnpB+IN7Mcc8BiiqSmKZD4tw60mv22h/LRpsM4nISyF3mo/lz9DRQRFodvb">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gbJJZe1HuHrkx4OBnt5vT3QrlTPWM/m+GuXCO8GZXSFhJlL9pZ7/HyB3vckYbqo+hwkFK+u76SH5Ic6XcZhxZcBrcA+jvFdHZZD28uwtyasgZDbO3t40GidZYEq5/Goq.B0MqSeMU1Dky9MhGHCyq59iFg55RubWVq/+ykWowAPM2QFhU2WYVfk1zHCPvFP723CHyEJ56r7+pM+zTsko/1ZrTMTiA1lt59ciDqu2foZRWpFt3fsd3iPewNwE5P+6P">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Merci</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
