--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Nous sommes à vos cotés, où que vous soyez">
 
 
   
-  <section class="menu cid-stjueGxZFY" once="menu" id="menu2-bq">
+  <section class="menu cid-stjz9VgjbS" once="menu" id="menu2-bt">
 
     
 
@@ -62,7 +62,7 @@ Nous sommes à vos cotés, où que vous soyez">
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 4rem;">
+                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
@@ -91,7 +91,7 @@ Nous sommes à vos cotés, où que vous soyez">
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-figure" style="width: 70%;">
+            <div class="mbr-figure" style="width: 60%;">
                 <img src="assets/images/www.coachinglab.fr-1.gif" alt="" title="">
             </div>
 
