--- a/essai.html
+++ b/essai.html
@@ -43,7 +43,7 @@
 
 
   
-  <section class="menu cid-stjueGxZFY" once="menu" id="menu2-bq">
+  <section class="menu cid-stjz9VgjbS" once="menu" id="menu2-bt">
 
     
 
@@ -60,7 +60,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 4rem;">
+                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 4.6rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
@@ -107,7 +107,7 @@
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-figure" style="width: 55%;">
+            <div class="mbr-figure" style="width: 45%;">
                 <a href="index.html"><img src="assets/images/www.coachinglab.fr-1.gif" alt="" title=""></a>
             </div>
 
