--- a/personnel.html
+++ b/personnel.html
@@ -44,7 +44,7 @@ Le coaching en ligne vous donne accès, à un moment pour vous connecter à vous
 
 
   
-  <section class="menu cid-stjueGxZFY" once="menu" id="menu2-bq">
+  <section class="menu cid-stjz9VgjbS" once="menu" id="menu2-bt">
 
     
 
@@ -61,7 +61,7 @@ Le coaching en ligne vous donne accès, à un moment pour vous connecter à vous
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 4rem;">
+                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 4.6rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
