create github pages

--- a/apropos.html
+++ b/apropos.html
@@ -44,7 +44,7 @@
 
 
   
-  <section class="menu cid-stjz9VgjbS" once="menu" id="menu2-bt">
+  <section class="menu cid-stjB9sImrc" once="menu" id="menu2-bu">
 
     
 
