--- a/entreprise.html
+++ b/entreprise.html
@@ -45,7 +45,7 @@ pour innover et créer les succès futurs de votre entreprise .">
 
 
   
-  <section class="menu cid-stjz9VgjbS" once="menu" id="menu2-bt">
+  <section class="menu cid-stjB9sImrc" once="menu" id="menu2-bu">
 
     
 
