--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ Nous sommes à vos cotés, où que vous soyez">
 
 
   
-  <section class="menu cid-stjz9VgjbS" once="menu" id="menu2-bt">
+  <section class="menu cid-stjB9sImrc" once="menu" id="menu2-bu">
 
     
 
@@ -62,7 +62,7 @@ Nous sommes à vos cotés, où que vous soyez">
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html">
-                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 3.8rem;">
+                        <img src="assets/images/-logo-seul-clab-final.gif" alt="" title="" style="height: 4.6rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-4" href="index.html">coachinglab.fr&nbsp;</a></span>
