--- a/personnel.html
+++ b/personnel.html
@@ -44,7 +44,7 @@ Le coaching en ligne vous donne accès, à un moment pour vous connecter à vous
 
 
   
-  <section class="menu cid-stjz9VgjbS" once="menu" id="menu2-bt">
+  <section class="menu cid-stjB9sImrc" once="menu" id="menu2-bu">
 
     
 
